<resources>
    <string name="app_name">Alarm</string>
    <string name="title_activity_set_alarm">Set Alarm</string>
    <string name="edit_label">Label </string>
    <string name="action_done">Done</string>
    <string name="action_ok">OK</string>
    <string name="toggle_sun">SUN</string>
    <string name="toggle_mon">MON</string>
    <string name="toggle_tue">TUE</string>
    <string name="toggle_wed">WED</string>
    <string name="toggle_thu">THU</string>
    <string name="toggle_fri">FRI</string>
    <string name="toggle_sat">SAT</string>
    <string name="button_pick_contact">Choose contact to call on alarm time</string>
    <string name="picker_msg">You haven\'t picked anything!</string>
    <string name="picker_error_msg">Something went wrong!</string>
    <string name="content_description_delete_alarm">Delete alarm</string>
    <string name="content_description_ringtone">Pick ringtone</string>
    <string name="content_description_contact">Pick contact</string>
    <string name="delete_alarm_dialog_title">Delete alarm</string>
    <string name="delete_alarm_dialog_message">Want to delete this alarm?</string>
    <string name="delete_alarm_dialog_button_cancel">Cancel</string>
    <string name="delete_alarm_dialog_button_yes">Yes</string>
    <string name="radio_contact">Call to someone</string>
    <string name="title_activity_ring_alarm">Alarm Ringing</string>
    <string name="toast_message_ring_alarm_activity">Hold button to cancel alarm</string>
    <string name="text_activity_main">This is your Alarm app. Press \'+\' button to start
        creating your alarms!</string>
    <string name="menu_add_to_calendar">Add to google calendar</string>
    <string name="toast_delete_success_message">Successfully deleted event from calendar!</string>
    <string name="toast_delete_failure_message">Failed to delete event from calendar!</string>
    <string name="toast_create_success_message">Successfully created event in calendar!</string>
    <string name="toast_create_failure_message">Failed to create event in calendar!</string>
    <string name="toast_update_success_message">Successfully updated event in calendar!</string>
    <string name="toast_update_failure_message">Failed to update event in calendar!</string>
    <string name="toast_permission_create_message">You cannot add event to calendar unless you
        allow!</string>
    <string name="toast_permission_update_message">You cannot update event in calendar unless you
        allow! Only alarm is updated.</string>
    <string name="toast_permission_delete_message">You cannot delete event in calendar unless you
        allow!</string>
    <string name="toast_permission_call_phone_message">You cannot make phone calls unless you
        allow!</string>
    <string name="toast_permission_calendar_rationale">Please allow app to add/update/delete
        event(s).</string>
    <string name="toast_permission_call_phone_rationale">Please allow app to make phone
        calls.</string>
    <string name="toast_permission_granted">Well done! You\'re good to go!</string>
    <string name="toast_calendar_select_day">Make sure the alarm is ON and at least one day is
        selected.</string>
    <string name="time_difference">alarm set for %1$d hours and %2$d minutes from now</string>
</resources>
