<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/list_selector"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:id="@+id/linear_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_time"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_time_size"/>

        <ToggleButton
            android:id="@+id/toggle_on_off"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_0"
        android:hint="@string/edit_label"/>

    <LinearLayout
        android:id="@+id/linear_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_label"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggle_sun"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:textOff="@string/toggle_sun"
            android:textOn="@string/toggle_sun"
            android:textSize="@dimen/toggle_text_size"/>

        <ToggleButton
            android:id="@+id/toggle_mon"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:textOff="@string/toggle_mon"
            android:textOn="@string/toggle_mon"
            android:textSize="@dimen/toggle_text_size"/>

        <ToggleButton
            android:id="@+id/toggle_tue"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:textOff="@string/toggle_tue"
            android:textOn="@string/toggle_tue"
            android:textSize="@dimen/toggle_text_size"/>

        <ToggleButton
            android:id="@+id/toggle_wed"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:textOff="@string/toggle_wed"
            android:textOn="@string/toggle_wed"
            android:textSize="@dimen/toggle_text_size"/>

        <ToggleButton
            android:id="@+id/toggle_thu"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:textOff="@string/toggle_thu"
            android:textOn="@string/toggle_thu"
            android:textSize="@dimen/toggle_text_size"/>

        <ToggleButton
            android:id="@+id/toggle_fri"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:textOff="@string/toggle_fri"
            android:textOn="@string/toggle_fri"
            android:textSize="@dimen/toggle_text_size"/>

        <ToggleButton
            android:id="@+id/toggle_sat"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:textOff="@string/toggle_sat"
            android:textOn="@string/toggle_sat"
            android:textSize="@dimen/toggle_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_2"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_ringtone"
            android:src="@drawable/ic_music_note_grey600"/>

        <TextView
            android:id="@+id/text_ringtone"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="@android:color/transparent"/>
    </LinearLayout>
</RelativeLayout>
