<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.framgia.alarm.SetAlarmActivity"
    tools:showIn="@layout/activity_set_alarm">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/linear_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TimePicker
                android:id="@+id/text_time"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_time_size"/>

            <ToggleButton
                android:id="@+id/toggle_on_off"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_0"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_label"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/edit_label"/>

            <ImageButton
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button_delete_alarm"
                android:background="@android:color/transparent"
                android:contentDescription="@string/content_description_delete_alarm"
                android:src="@android:drawable/ic_menu_delete"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_1"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggle_sun"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/toggle_sun"
                android:textOn="@string/toggle_sun"
                android:textSize="@dimen/toggle_text_size"/>

            <ToggleButton
                android:id="@+id/toggle_mon"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/toggle_mon"
                android:textOn="@string/toggle_mon"
                android:textSize="@dimen/toggle_text_size"/>

            <ToggleButton
                android:id="@+id/toggle_tue"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/toggle_tue"
                android:textOn="@string/toggle_tue"
                android:textSize="@dimen/toggle_text_size"/>

            <ToggleButton
                android:id="@+id/toggle_wed"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/toggle_wed"
                android:textOn="@string/toggle_wed"
                android:textSize="@dimen/toggle_text_size"/>

            <ToggleButton
                android:id="@+id/toggle_thu"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/toggle_thu"
                android:textOn="@string/toggle_thu"
                android:textSize="@dimen/toggle_text_size"/>

            <ToggleButton
                android:id="@+id/toggle_fri"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/toggle_fri"
                android:textOn="@string/toggle_fri"
                android:textSize="@dimen/toggle_text_size"/>

            <ToggleButton
                android:id="@+id/toggle_sat"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/toggle_sat"
                android:textOn="@string/toggle_sat"
                android:textSize="@dimen/toggle_text_size"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_ringtone"
                android:src="@drawable/ic_music_note_grey600"/>

            <Button
                android:id="@+id/button_tone_picker"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@android:color/transparent"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>